Mudança nome (correto)

--- a/Index.html
+++ b/Index.html
@@ -40,7 +40,7 @@
                 </li>
                 <li>
                     <h5>
-                        Marcel
+                        Marcel Felix
                     </h5>
                 </li>
             </ul>
