Alteração para teste de fundo 1

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="Estilo.css">
+        <link rel="stylesheet" href="./Estilo.css">
+        <title>Projeto Coderhouse Rick e Morty</title>
     </head>
     <body>
         <header>
