--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
                 PROJETO RICK & MORTY
             </h1>
         </header>
+        <div class="flex-container">
+            <div class="flex-box">
+            </div>
+        </div>
         <nav>
             <h3>
                 GRUPO:
