--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="./Estilo.css">
+        <link rel="stylesheet" href="Estilo.css">
         <title>Projeto Coderhouse Rick e Morty</title>
     </head>
     <body>
@@ -12,6 +12,7 @@
         </header>
         <div class="flex-container">
             <div class="flex-box">
+
             </div>
         </div>
         <nav>
