--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="Estilo.css">
+        <meta name=""content="">
         <title>Projeto Coderhouse Rick e Morty</title>
     </head>
     <body>
