--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
         <link rel="stylesheet" href="Estilo.css">
         <meta name=""content="">
         <title>Projeto Coderhouse Rick e Morty</title>
+        <style type="text/css">
+            {
+                margin: 0;
+                padding: 0;
+                box-sizing:
+            }
+        </style>
     </head>
     <body>
         <header>
@@ -13,7 +20,7 @@
         </header>
         <div class="flex-container">
             <div class="flex-box">
-
+                
             </div>
         </div>
         <nav>
