Teste de cor de fundo e card

--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
         <meta name=""content="">
         <title>Projeto Coderhouse Rick e Morty</title>
         <style type="text/css">
-            {
-                margin: 0;
-                padding: 0;
-                box-sizing:
-            }
         </style>
     </head>
     <body>
@@ -18,9 +13,9 @@
                 PROJETO RICK & MORTY
             </h1>
         </header>
-        <div class="flex-container">
-            <div class="flex-box">
-                
+        <div class="card">
+            <div class="imgBx">
+            <img src="download.jpg">               
             </div>
         </div>
         <nav>
