teste espaçamentos e caixa 1

--- a/index.html
+++ b/index.html
@@ -13,50 +13,18 @@
                 PROJETO RICK & MORTY
             </h1>
         </header>
-        <div class="card">
-            <div class="imgBx">
+        <div class="container">
+            <div class="personagens">
             <img src="download.jpg">               
             </div>
+            <div class="episodios">
+            <img src="images.jpg">
+            </div>
+            <div class="citacoes">
+            <img src="claypeople.PNG">
+            </div>
+            <div class="criaturas">
+            <img src="9a2e4356892043.59c0b3697ee33.jpg">
+            </div>
         </div>
-        <nav>
-            <h3>
-                GRUPO:
-            </h3>
-            <ul>
-                <li>
-                    <h5>
-                        Bruno Almeida
-                    </h5>
-                </li>
-                <li>
-                    <h5>
-                        Elias
-                    </h5>
-                </li>
-                <li>
-                    <h5>
-                        Jaque
-                    </h5>
-                </li>
-                <li>
-                    <h5>
-                        Kevin Esteves
-                    </h5>
-                </li>
-                <li>
-                    <h5>
-                        Kimberly
-                    </h5>
-                </li>
-                <li>
-                    <h5>
-                        Marcel Felix
-                    </h5>
-                </li>
-            </ul>
-        </nav>
-    </body>
-    <footer>
-        WORK IN PROGRESS
-    </footer>
 </html>
