teste de fundo 2

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
             </h1>
         </header>
         <div class="container">
-            <div class="personagens">
+            <div class="container personagens">
             <img src="download.jpg">               
             </div>
-            <div class="episodios">
+            <div class="container episodios">
             <img src="images.jpg">
             </div>
-            <div class="citacoes">
+            <div class="container citacoes">
             <img src="claypeople.PNG">
             </div>
-            <div class="criaturas">
+            <div class="container criaturas">
             <img src="9a2e4356892043.59c0b3697ee33.jpg">
             </div>
         </div>
