Commit com ajustes do professor

--- a/index.html
+++ b/index.html
@@ -1,30 +1,57 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="Estilo.css">
         <meta name=""content="">
         <title>Projeto Coderhouse Rick e Morty</title>
-        <style type="text/css">
-        </style>
+        <link rel="stylesheet" href="./CSS/styles.css">
     </head>
+
     <body>
+
         <header>
-            <h1>
-                PROJETO RICK & MORTY
-            </h1>
+            <div class="logo">
+            <img src="./Imagens/Rick-And-Morty-Logo.png">
+            </div>
+            <div class="login">
+            <button>Login</button>
+            </div>
         </header>
+
         <div class="container">
-            <div class="container personagens">
-            <img src="download.jpg">               
+            <div class="opcoes">
+                <div class="personagens">
+                <img src="download.jpg">               
+                </div>
+                <div class="episodios">
+                <img src="images.jpg">
+                </div>
+                <div class="citacoes">
+                <img src="claypeople.PNG">
+                </div>
+                <div class="criaturas">
+                <img src="9a2e4356892043.59c0b3697ee33.jpg">
+                </div>
+                <div class="vertudo">
+                    <button>ver tudo</button>
+                </div>
             </div>
-            <div class="container episodios">
-            <img src="images.jpg">
+
+            <div class="portal">
+                <img class="portal" src="./Imagens/rick.gif">
             </div>
-            <div class="container citacoes">
-            <img src="claypeople.PNG">
+
+            <div class="jogar">
+                <button>JOGAR</button>
             </div>
-            <div class="container criaturas">
-            <img src="9a2e4356892043.59c0b3697ee33.jpg">
+
+            <div class="aviso">
+                <h3>AVISO</h3>
+                <p>Este é um jogo criado por fãs e para fãs.</p>
             </div>
         </div>
+    </body>
+    
+    <footer>
+
+    </footer>
 </html>
