--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <body>
 
+        <!-- Header -->
         <header>
             <div class="logo">
             <img src="./Imagens/Rick-And-Morty-Logo.png">
@@ -17,7 +18,10 @@
             </div>
         </header>
 
-        <div class="container">
+        <!-- Container -->        
+        <main class="container">
+
+            <!-- Opcoes -->
             <div class="opcoes">
                 <div class="personagens">
                 <img src="download.jpg">               
@@ -36,19 +40,18 @@
                 </div>
             </div>
 
+            <!-- Portal -->
             <div class="portal">
                 <img class="portal" src="./Imagens/rick.gif">
+                <button class="jogar">JOGAR</button>
             </div>
 
-            <div class="jogar">
-                <button>JOGAR</button>
-            </div>
-
+            <!-- Avisos -->
             <div class="aviso">
                 <h3>AVISO</h3>
-                <p>Este é um jogo criado por fãs e para fãs.</p>
+                <p>Este jogo foi criado por fã do desenho para fãs do desenho. Nada neste site tem relação oficial com o produto Rick e Morty.</p>
             </div>
-        </div>
+        </main>
     </body>
     
     <footer>
