Adição de itens na página de perguntas

--- a/paginas/pergunta1.html
+++ b/paginas/pergunta1.html
@@ -21,6 +21,28 @@
 
         <!-- Centro -->    
         <main class="center">
+
+            <!-- Perguntas -->
+            <div class="perguntas">
+                <h2>Episódios Quiz</h2>
+                <h2>Tempo</h2>
+                <p>Responda as perguntas abaixo</p>
+                <h3>Pergunta 1/5</h3>
+                <h3>O que o Morty queria do Presidente?</h3>
+                <h2>Escolher Resposta</h2>>
+                <button>sair</button>
+                <button>Próximo!</button>
+            </div>
+
+            <!-- menu -->
+            <div class="menu">
+                <button>principal</button>
+                <button>quiz</button>
+                <button>faq</button>
+            </div>
         </main>
     </body>
+    <footer>
+        
+    </footer>
 </html>
