Adição de vídeos e páginas de perguntas

--- a/paginas/pergunta1.html
+++ b/paginas/pergunta1.html
@@ -27,9 +27,16 @@
                 <h2>Episódios Quiz</h2>
                 <h2>Tempo</h2>
                 <p>Responda as perguntas abaixo</p>
+                <video class="pergunta1" controls width="100">
+                    <source src="/Imagens/Rick And Morty. #8 rick na casa branca..mp4">
+                </video>
                 <h3>Pergunta 1/5</h3>
                 <h3>O que o Morty queria do Presidente?</h3>
                 <h2>Escolher Resposta</h2>>
+                <p>Uma Selfie</p>
+                <p>Um prêmio</p>
+                <p>Uma camiseta</p>
+                <p>Um autografo</p>
                 <button>sair</button>
                 <button>Próximo!</button>
             </div>
