teste de tamanho

--- a/paginas/pergunta1.html
+++ b/paginas/pergunta1.html
@@ -27,7 +27,7 @@
                 <h2>Episódios Quiz</h2>
                 <h2>Tempo</h2>
                 <p>Responda as perguntas abaixo</p>
-                <video class="pergunta1" controls width="100">
+                <video class="pergunta1" controls>
                     <source src="/Imagens/Rick And Morty. #8 rick na casa branca..mp4">
                 </video>
                 <h3>Pergunta 1/5</h3>
