Adição Botão Sair

--- a/paginas/topicos.html
+++ b/paginas/topicos.html
@@ -90,6 +90,7 @@
                 <button>principal</button>
                 <button>quiz</button>
                 <button>faq</button>
+                <button>Sair</button>
             </div>
         </main>
     </body>
