--- a/index.html
+++ b/index.html
@@ -23,17 +23,29 @@
 
             <!-- Opcoes -->
             <div class="opcoes">
-                <div class="personagens">
-                <img src="download.jpg">               
+                <div class="personagens-img">
+                <img src="download.jpg">
+                    <div class="personagens-txt">
+                    <h4>Personagens</h4>
+                    </div>
                 </div>
-                <div class="episodios">
+                <div class="episodios-img">
                 <img src="images.jpg">
+                    <div class="episodios-txt">
+                    <h4>Episódios</h4>
+                    </div>  
                 </div>
-                <div class="citacoes">
+                <div class="citacoes-img">
                 <img src="claypeople.PNG">
+                    <div class="citacoes-txt">
+                    <h4>Citações</h4>
+                    </div> 
                 </div>
-                <div class="criaturas">
+                <div class="criaturas-img">
                 <img src="9a2e4356892043.59c0b3697ee33.jpg">
+                    <div class="criaturas-txt">
+                    <h4>criaturas</h4>
+                    </div> 
                 </div>
                 <div class="vertudo">
                     <button>ver tudo</button>
