Inclusão Página de perfil e correção de elementos

--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -5,24 +5,48 @@
         <title>Projeto Coderhouse Rick e Morty</title>
         <link rel="stylesheet" href="/styles/styles.css">
     </head>
-
     <body>
-
         <!-- Header -->
         <header>
             <div class="logo">
-            <img src="./Imagens/Rick-And-Morty-Logo.png">
+                <img src="./Imagens/Rick-And-Morty-Logo.png">
             </div>
-            <div class="login">
-            <button type="button" name="login"></button>
+            <div class="start">
+                <button>começar quiz</button>
+            </div>
+            <div class="perfil small">
+                <img src="/Imagens/download (1).jpg">
             </div>
         </header>
 
-        <!-- Container -->        
-        <main class="container">
+        <!-- menu -->
+        <nav class="menu">
+            <button>principal</button>
+            <button>quiz</button>
+            <button>faq</button>
+            <button>Sair</button>
+        </nav>
 
-            <!-- Destaques -->
+        <!-- Container -->
+        <div class="container-perfil">
+            <div class="progress">
+                <img src="/Imagens/download (1).jpg">
+                <h2>Nome</h2>
+                <p>Nível 5</p>
+            </div>
+
+            <div class="conquistas">
+                <h3>Conquistas</h3>
+                <img src="/imagens/Badge.png">
+                <img src="/imagens/Badge1.png">
+                <img src="/imagens/Badge2.png">
+                <div class="vertudo">
+                    <button>ver tudo</button>
+                </div>
+            </div>
+
             <div class="destaques">
+                <h3>Categorias em destaque</h3>
                 <div class="personagens-img">
                 <img src="download.jpg">
                     <div class="personagens-txt">
@@ -51,22 +75,6 @@
                     <button>ver tudo</button>
                 </div>
             </div>
-
-            <!-- Portal -->
-            <div class="portal">
-                <img class="portal" src="./Imagens/rick.gif">
-                <button class="jogar">JOGAR</button>
-            </div>
-
-            <!-- Avisos -->
-            <div class="aviso">
-                <h3>AVISO</h3>
-                <p>Este jogo foi criado por fã do desenho para fãs do desenho. Nada neste site tem relação oficial com o produto Rick e Morty.</p>
-            </div>
-        </main>
+        </div>       
     </body>
-    
-    <footer>
-
-    </footer>
 </html>
