--- a/paginas/topicos.html
+++ b/paginas/topicos.html
@@ -3,7 +3,7 @@
     <head>
         <meta name=""content="">
         <title>Projeto Coderhouse Rick e Morty</title>
-        <link rel="stylesheet" href="./CSS/styles.css">
+        <link rel="stylesheet" href="/styles/styles.css">
     </head>
     <body>
         <!-- Header -->
@@ -86,12 +86,12 @@
             </div>
 
             <!-- menu -->
-            <div class="menu">
+            <nav class="menu">
                 <button>principal</button>
                 <button>quiz</button>
                 <button>faq</button>
                 <button>Sair</button>
-            </div>
+            </nav>
         </main>
     </body>
 </html>
