--- a/paginas/pergunta 4.html
+++ b/paginas/pergunta 4.html
@@ -3,7 +3,7 @@
     <head>
         <meta name=""content="">
         <title>Projeto Coderhouse Rick e Morty</title>
-        <link rel="stylesheet" href="./CSS/styles.css">
+        <link rel="stylesheet" href="/styles/styles.css">
     </head>
     <body>
         <!-- Header -->
