--- a/paginas/pergunta1.html
+++ b/paginas/pergunta1.html
@@ -3,7 +3,7 @@
     <head>
         <meta name=""content="">
         <title>Projeto Coderhouse Rick e Morty</title>
-        <link href="/styles/styles.css" rel="stylesheet">
+        <link href="estilo teste.CSS" rel="stylesheet">
     </head>
     <body>
         <!-- Header -->
