--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="./Imagens/Rick-And-Morty-Logo.png">
             </div>
             <div class="login">
-            <button type="button" name="login"></button>
+            <button type="button">LOGIN</button>
             </div>
         </header>
 
