--- a/paginas/pergunta1.html
+++ b/paginas/pergunta1.html
@@ -24,21 +24,33 @@
 
             <!-- Perguntas -->
             <div class="perguntas">
-                <h2>Episódios Quiz</h2>
-                <h2>Tempo</h2>
-                <p>Responda as perguntas abaixo</p>
-                <video class="pergunta1" controls>
-                    <source src="/Imagens/Rick And Morty. #8 rick na casa branca..mp4">
-                </video>
-                <h3>Pergunta 1/5</h3>
-                <h3>O que o Morty queria do Presidente?</h3>
-                <h2>Escolher Resposta</h2>>
-                <p>Uma Selfie</p>
-                <p>Um prêmio</p>
-                <p>Uma camiseta</p>
-                <p>Um autografo</p>
-                <button>sair</button>
-                <button>Próximo!</button>
+                <div class="box1">
+                    <h2>Episódios Quiz</h2>
+                    <h2>Tempo</h2>
+                </div>
+                <div class="box2">
+                    <p>Responda as perguntas abaixo</p>
+                </div>
+                <div class="box3">
+                    <video class="pergunta1" controls>
+                        <source src="/Imagens/Rick And Morty. #8 rick na casa branca..mp4">
+                    </video>
+                </div>
+                <div class="box4">
+                    <h3>Pergunta 1/5</h3>
+                    <h3>O que o Morty queria do Presidente?</h3>
+                </div>
+                <div class="box5">
+                    <h2>Escolher Resposta</h2>>
+                    <p>Uma Selfie</p>
+                    <p>Um prêmio</p>
+                    <p>Uma camiseta</p>
+                    <p>Um autografo</p>
+                </div>
+                <div class="box6">
+                    <button>sair</button>
+                    <button>Próximo!</button>
+                </div>
             </div>
 
             <!-- menu -->
