CSS páginas de pergunta inicio

--- a/paginas/pergunta1.html
+++ b/paginas/pergunta1.html
@@ -9,13 +9,13 @@
         <!-- Header -->
         <header>
             <div class="logo">
-            <img src="./Imagens/Rick-And-Morty-Logo.png">
+            <img src="../Imagens/Rick-And-Morty-Logo.png">
             </div>
             <div class="restart">
             <button>reiniciar quiz</button>
             </div>
             <div class="perfil small">
-            <img src="/Imagens/download (1).jpg">
+            <img src="../Imagens/download (1).jpg">
             </div>
             </header>
 
@@ -40,7 +40,7 @@
                 </div>
                 <div class="box3">
                     <video class="pergunta1" controls>
-                        <source src="/Imagens/Rick And Morty. #8 rick na casa branca..mp4">
+                        <source src="../Imagens/Rick And Morty. #8 rick na casa branca..mp4">
                     </video>
                 </div>
                 <div class="box4">
