--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
             <!-- Destaques -->
             <div class="destaques">
                 <div class="personagens-img">
-                <img src="download.jpg">
+                <img src="./imagens/download.jpg">
                     <div class="personagens-txt">
                     <h4>Personagens</h4>
                     </div>
                 </div>
                 <div class="episodios-img">
-                <img src="images.jpg">
+                <img src="./imagens/images.jpg">
                     <div class="episodios-txt">
                     <h4>Episódios</h4>
                     </div>  
                 </div>
                 <div class="citacoes-img">
-                <img src="claypeople.PNG">
+                <img src="./imagens/claypeople.PNG">
                     <div class="citacoes-txt">
                     <h4>Citações</h4>
                     </div> 
                 </div>
                 <div class="criaturas-img">
-                <img src="9a2e4356892043.59c0b3697ee33.jpg">
+                <img src="./imagens/9a2e4356892043.59c0b3697ee33.jpg">
                     <div class="criaturas-txt">
                     <h4>criaturas</h4>
                     </div> 
