--- a/paginas/pergunta1.html
+++ b/paginas/pergunta1.html
@@ -24,9 +24,15 @@
             
             <!-- menu -->
             <div class="menu">
-                <button>principal</button>
-                <button>quiz</button>
-                <button>faq</button>
+                <div class="botoes">
+                    <button>principal</button>
+                </div>
+                <div class="botoes">
+                    <button>quiz</button>
+                </div>
+                <div class="botoes">
+                    <button>FAQ</button>
+                </div>
             </div>
 
             <!-- Perguntas -->
@@ -40,7 +46,7 @@
                 </div>
                 <div class="box3">
                     <video class="pergunta1" controls>
-                        <source src="../Imagens/Rick And Morty. #8 rick na casa branca..mp4">
+                        <source src="../imagens/Rick And Morty. #8 rick na casa branca..mp4">
                     </video>
                 </div>
                 <div class="box4">
