Adição de CSS páginas de pergunta

--- a/paginas/pergunta 5.html
+++ b/paginas/pergunta 5.html
@@ -22,31 +22,48 @@
         <!-- Centro -->    
         <main class="center">
 
-            <!-- Perguntas -->
-            <div class="perguntas">
-                <h2>Episódios Quiz</h2>
-                <h2>Tempo</h2>
-                <p>Responda as perguntas abaixo</p>
-                <video class="pergunta1" controls width="100">
-                    <source src="/Imagens/Fica Tranquileba (Get Schwifty) - Rick and Morty [PT-BR].mp4">
-                </video>
-                <h3>Pergunta 5/5</h3>
-                <h3>Qual cantor ajuda o Rick e Morty a salvar a terra dos Cromulons?</h3>
-                <h2>Escolher Resposta</h2>>
-                <p>50 Cent</p>
-                <p>O presidente que secretamente é um rapper</p>
-                <p>Ice T</p>
-                <p>Snopp Dogg</p>
-                <button>sair</button>
-                <button>Próximo!</button>
-            </div>
-
             <!-- menu -->
             <div class="menu">
-                <button>principal</button>
-                <button>quiz</button>
-                <button>faq</button>
+                <div class="botoes">
+                    <button>principal</button>
+                </div>
+                <div class="botoes">
+                    <button>quiz</button>
+                </div>
+                <div class="botoes">
+                    <button>FAQ</button>
+                </div>
             </div>
+
+            <!-- Perguntas -->
+            <div class="perguntas">
+                <div class="box1">
+                    <h2>Episódios Quiz</h2>
+                    <h2>Tempo</h2>
+                </div>
+                <div class="box2">
+                    <p>Responda as perguntas abaixo</p>
+                </div>
+                <div class="box3">
+                    <video class="pergunta2" controls>
+                        <source src="../imagens/Fica Tranquileba (Get Schwifty) - Rick and Morty [PT-BR].mp4">
+                    </video>
+                </div>
+                <div class="box4">
+                    <h3>Pergunta 5/5</h3>
+                    <h3>Qual cantor ajuda o Rick e Morty a salvar a terra dos Cromulons?</h3>
+                </div>
+                <div class="box5">
+                    <h2>Escolher Resposta</h2>>
+                    <p>50 Cent</p>
+                    <p>O presidente que secretamente é um rapper</p>
+                    <p>Ice T</p>
+                    <p>Snopp Dogg</p>
+                </div>
+                <div class="box6">
+                    <button>sair</button>
+                    <button>Próximo!</button>
+                </div>
         </main>
     </body>
     <footer>
