--- a/paginas/pergunta2.html
+++ b/paginas/pergunta2.html
@@ -3,50 +3,68 @@
     <head>
         <meta name=""content="">
         <title>Projeto Coderhouse Rick e Morty</title>
-        <link rel="stylesheet" href="/styles/styles.css">
+        <link rel="stylesheet" href="../styles/styles2.CSS">
     </head>
     <body>
         <!-- Header -->
         <header>
             <div class="logo">
-            <img src="./Imagens/Rick-And-Morty-Logo.png">
+            <img src="../Imagens/Rick-And-Morty-Logo.png">
             </div>
             <div class="restart">
             <button>reiniciar quiz</button>
             </div>
             <div class="perfil small">
-            <img src="/Imagens/download (1).jpg">
+            <img src="../Imagens/download (1).jpg">
             </div>
             </header>
 
         <!-- Centro -->    
         <main class="center">
 
-            <!-- Perguntas -->
-            <div class="perguntas">
-                <h2>Episódios Quiz</h2>
-                <h2>Tempo</h2>
-                <p>Responda as perguntas abaixo</p>
-                <video class="pergunta2" controls width="100">
-                    <source src="/Imagens/Adeus Lunáticos (COMPLETO) - ( Goodbye Moonmen) - Rick and Morty (PT BR).mp4">
-                </video>
-                <h3>Pergunta 2/5</h3>
-                <h3>Por que o Morty matou essa forma de vida?</h3>
-                <h2>Escolher Resposta</h2>>
-                <p>Pois ele cantava mal</p>
-                <p>Ele queria destruir todas as formas de vida</p>
-                <p>O Rick não gostava dele</p>
-                <p>Ele era feio, apesar de ser útil</p>
-                <button>sair</button>
-                <button>Próximo!</button>
-            </div>
-
             <!-- menu -->
             <div class="menu">
-                <button>principal</button>
-                <button>quiz</button>
-                <button>faq</button>
+                <div class="botoes">
+                    <button>principal</button>
+                </div>
+                <div class="botoes">
+                    <button>quiz</button>
+                </div>
+                <div class="botoes">
+                    <button>FAQ</button>
+                </div>
             </div>
+            
+                <!-- Perguntas -->
+                 <div class="perguntas">
+                    <div class="box1">
+                        <h2>Episódios Quiz</h2>
+                        <h2>Tempo</h2>
+                    </div>
+                    <div class="box2">
+                        <p>Responda as perguntas abaixo</p>
+                    </div>
+                    <div class="box3">
+                        <video class="pergunta2" controls>
+                            <source src="../imagens/Adeus Lunáticos (COMPLETO) - ( Goodbye Moonmen) - Rick and Morty (PT BR).mp4">
+                        </video>
+                    </div>
+                    <div class="box4">
+                        <h3>Pergunta 2/5</h3>
+                        <h3>Por que o Morty matou essa forma de vida?</h3>
+                    </div>
+                    <div class="box5">
+                        <h2>Escolher Resposta</h2>>
+                        <p>Pois ele cantava mal</p>
+                        <p>Ele queria destruir todas as formas de vida</p>
+                        <p>O Rick não gostava dele</p>
+                        <p>Ele era feio, apesar de ser útil</p>
+                    </div>
+                    <div class="box6">
+                        <button>sair</button>
+                        <button>Próximo!</button>
+                    </div>
+                </div>
         </main>
     </body>
     <footer>
