--- a/paginas/pergunta 4.html
+++ b/paginas/pergunta 4.html
@@ -3,49 +3,67 @@
     <head>
         <meta name=""content="">
         <title>Projeto Coderhouse Rick e Morty</title>
-        <link rel="stylesheet" href="/styles/styles.css">
+        <link rel="stylesheet" href="../styles/styles2.CSS">
     </head>
     <body>
         <!-- Header -->
         <header>
             <div class="logo">
-            <img src="./Imagens/Rick-And-Morty-Logo.png">
+            <img src="../Imagens/Rick-And-Morty-Logo.png">
             </div>
             <div class="restart">
             <button>reiniciar quiz</button>
             </div>
             <div class="perfil small">
-            <img src="/Imagens/download (1).jpg">
+            <img src="../Imagens/download (1).jpg">
             </div>
             </header>
 
         <!-- Centro -->    
         <main class="center">
 
-            <!-- Perguntas -->
-            <div class="perguntas">
-                <h2>Episódios Quiz</h2>
-                <h2>Tempo</h2>
-                <p>Responda as perguntas abaixo</p>
-                <video class="pergunta4" controls width="100">
-                    <source src="/Imagens/Rick and Morty. #2 Picles Rick cai no ralo..mp4">
-                </video>
-                <h3>Pergunta 4/5</h3>
-                <h3>Onde o Picles Rick vai parar depois de sair do esgoto?</h3>
-                <h2>Escolher Resposta</h2>>
-                <p>No banheiro da sala de terapia da Dr Wong</p>
-                <p>No banheiro da cada dos Smith</p>
-                <p>Em um prédio da CIA</p>
-                <p>Um prédio de uma agência russa</p>
-                <button>sair</button>
-                <button>Próximo!</button>
-            </div>
-
             <!-- menu -->
             <div class="menu">
-                <button>principal</button>
-                <button>quiz</button>
-                <button>faq</button>
+                <div class="botoes">
+                    <button>principal</button>
+                </div>
+                <div class="botoes">
+                    <button>quiz</button>
+                </div>
+                <div class="botoes">
+                    <button>FAQ</button>
+                </div>
+            </div>
+
+            <!-- Perguntas -->
+            <div class="perguntas">
+                <div class="box1">
+                    <h2>Episódios Quiz</h2>
+                    <h2>Tempo</h2>
+                </div>
+                <div class="box2">
+                    <p>Responda as perguntas abaixo</p>
+                </div>
+                <div class="box3">
+                    <video class="pergunta2" controls>
+                        <source src="../imagens/Rick and Morty. #2 Picles Rick cai no ralo..mp4">
+                    </video>
+                </div>
+                <div class="box4">
+                    <h3>Pergunta 4/5</h3>
+                    <h3>Onde o Picles Rick vai parar depois de sair do esgoto?</h3>
+                </div>
+                <div class="box5">
+                    <h2>Escolher Resposta</h2>>
+                    <p>No banheiro da sala de terapia da Dr Wong</p>
+                    <p>No banheiro da cada dos Smith</p>
+                    <p>Em um prédio da CIA</p>
+                    <p>Um prédio de uma agência russa</p>
+                </div>
+                <div class="box6">
+                    <button>sair</button>
+                    <button>Próximo!</button>
+                </div>
             </div>
         </main>
     </body>
