modified:   index.html modified:   styles/styles.css

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <!-- Avisos -->
             <div class="aviso">
                 <h3>AVISO</h3>
-                <p>Este jogo foi criado por fã do desenho para fãs do desenho. Nada neste site tem relação oficial com o produto Rick e Morty.</p>
+                <p>Este jogo foi criado de fãs para fãs do desenho. Nada neste site tem relação oficial com o produto Rick e Morty.</p>
             </div>
         </main>
     </body>
