modified:   index.html modified:   styles/styles.css

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" href="./styles/styles.css">
     </head>
 
-    <body>
-
+    <body style= "background-color: seagreen;">
+        
         <!-- Header -->
         <header>
             <div class="logo">
