modified:   index.html 	modified:   styles/styles.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -60,8 +60,13 @@
 
             <!-- Avisos -->
             <div class="aviso">
+                <center>
                 <h3>AVISO</h3>
-                <p>Este jogo foi criado de fãs para fãs do desenho. Nada neste site tem relação oficial com o produto Rick e Morty.</p>
+                <p>Este jogo foi criado de fãs para fãs do desenho. 
+                <br>
+                    Nada neste site tem relação oficial com o produto Rick e Morty.
+                </p>
+                </center>
             </div>
         </main>
     </body>
