modified:   index.html

--- a/index.html
+++ b/index.html
@@ -59,14 +59,13 @@
             </div>
 
             <!-- Avisos -->
-            <div class="aviso">
-                <center>
+            <div style="text-align: center" class="aviso">
                 <h3>AVISO</h3>
                 <p>Este jogo foi criado de fãs para fãs do desenho. 
                 <br>
                     Nada neste site tem relação oficial com o produto Rick e Morty.
                 </p>
-                </center>
+                
             </div>
         </main>
     </body>
