modified:   index.html modified:   styles/styles.css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head
         <meta name=""content="">
         <title>Projeto Coderhouse Rick e Morty</title>
         <link rel="stylesheet" href="./styles/styles.css">
