--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -3,13 +3,13 @@
     <head>
         <meta name=""content="">
         <title>Projeto Coderhouse Rick e Morty</title>
-        <link rel="stylesheet" href="/styles/styles.css">
+        <link rel="stylesheet" href="perfil-style.css"
     </head>
     <body>
         <!-- Header -->
         <header>
             <div class="logo">
-                <img src="./Imagens/Rick-And-Morty-Logo.png">
+                <img src="\Imagens\Rick-And-Morty-Logo.png">
             </div>
             <div class="start">
                 <button>começar quiz</button>
