Atualização dde imagens

--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -3,19 +3,19 @@
     <head>
         <meta name=""content="">
         <title>Projeto Coderhouse Rick e Morty</title>
-        <link rel="stylesheet" href="perfil-style.css"
+        <link rel="stylesheet" href="../styles/perfil-style.css">
     </head>
     <body>
         <!-- Header -->
         <header>
             <div class="logo">
-                <img src="\Imagens\Rick-And-Morty-Logo.png">
+                <img src="..\Imagens\Rick-And-Morty-Logo.png">
             </div>
             <div class="start">
                 <button>começar quiz</button>
             </div>
             <div class="perfil small">
-                <img src="/Imagens/download (1).jpg">
+                <img src="../Imagens/download (1).jpg">
             </div>
         </header>
 
@@ -30,16 +30,16 @@
         <!-- Container -->
         <div class="container-perfil">
             <div class="progress">
-                <img src="/Imagens/download (1).jpg">
+                <img src="../Imagens/download (1).jpg">
                 <h2>Nome</h2>
                 <p>Nível 5</p>
             </div>
 
             <div class="conquistas">
                 <h3>Conquistas</h3>
-                <img src="/imagens/Badge.png">
-                <img src="/imagens/Badge1.png">
-                <img src="/imagens/Badge2.png">
+                <img src="../imagens/Badge.png">
+                <img src="../imagens/Badge1.png">
+                <img src="../imagens/Badge2.png">
                 <div class="vertudo">
                     <button>ver tudo</button>
                 </div>
@@ -48,25 +48,25 @@
             <div class="destaques">
                 <h3>Categorias em destaque</h3>
                 <div class="personagens-img">
-                <img src="download.jpg">
+                <img src="../imagens/download.jpg">
                     <div class="personagens-txt">
                     <h4>Personagens</h4>
                     </div>
                 </div>
                 <div class="episodios-img">
-                <img src="images.jpg">
+                <img src="../imagens/images.jpg">
                     <div class="episodios-txt">
                     <h4>Episódios</h4>
                     </div>  
                 </div>
                 <div class="citacoes-img">
-                <img src="claypeople.PNG">
+                <img src="../imagens/claypeople.PNG">
                     <div class="citacoes-txt">
                     <h4>Citações</h4>
                     </div> 
                 </div>
                 <div class="criaturas-img">
-                <img src="9a2e4356892043.59c0b3697ee33.jpg">
+                <img src="../imagens/9a2e4356892043.59c0b3697ee33.jpg">
                     <div class="criaturas-txt">
                     <h4>criaturas</h4>
                     </div> 
