atualização de CSS perfil 2

--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -43,9 +43,11 @@
 
         <div class="conquistas">
             <h3>Conquistas</h3>
-            <img src="../imagens/Badge.png">
-            <img src="../imagens/Badge1.png">
-            <img src="../imagens/Badge2.png">
+            <div class="conquistas-img>">
+                <img src="../imagens/Badge.png">
+                <img src="../imagens/Badge1.png">
+                <img src="../imagens/Badge2.png">
+            </div>
             <div class="vertudo">
                 <button>ver tudo</button>
             </div>
