Ateração imagem de perfil

--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -15,7 +15,12 @@
                 <button>começar quiz</button>
             </div>
             <div class="perfil small">
-                <img src="../Imagens/download (1).jpg">
+                <img src="../imagens/128x128 2.png" style="
+                    height: 77px;
+                    width: 76px;
+                    border-radius: 170px;
+                    stroke: #4BB257;
+                    stroke-width: 3px;">
             </div>
         </header>
 
@@ -45,7 +50,11 @@
             <h3>Conquistas</h3>
             <div class="conquistas-img>">
                 <img src="../imagens/Badge.png">
+            </div>
+            <div class="conquistas-img>">
                 <img src="../imagens/Badge1.png">
+            </div>
+            <div class="conquistas-img>">
                 <img src="../imagens/Badge2.png">
             </div>
             <div class="vertudo">
