--- a/paginas/pergunta 5.html
+++ b/paginas/pergunta 5.html
@@ -15,7 +15,12 @@
             <button>reiniciar quiz</button>
             </div>
             <div class="perfil small">
-            <img src="/Imagens/download (1).jpg">
+                <img src="../imagens/128x128 2.png" style="
+                    height: 77px;
+                    width: 76px;
+                    border-radius: 170px;
+                    stroke: #4BB257;
+                    stroke-width: 3px;">
             </div>
             </header>
 
