Separação menu lateral

--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -27,70 +27,72 @@
         <!-- Container -->
         <div class="container-perfil">
 
-        <!-- menu -->
-        <div class="menu">
-            <div class="botoes">
-                <button>principal</button>
+            <!-- menu -->
+            <div class="menu">
+                <div class="botoes">
+                    <button>principal</button>
+                </div>
+                <div class="botoes">
+                    <button>quiz</button>
+                </div>
+                <div class="botoes">
+                    <button>FAQ</button>
+                </div>
             </div>
-            <div class="botoes">
-                <button>quiz</button>
-            </div>
-            <div class="botoes">
-                <button>FAQ</button>
-            </div>
-        </div>
 
             <!-- perfil -->
-            <div class="progress">
-                <img src="../Imagens/download (1).jpg">
-                <h2>Nome</h2>
-                <p>Nível 5</p>
-            </div>
+            <div class="perfil">
+                <div class="progress">
+                    <img src="../Imagens/download (1).jpg">
+                    <h2>Nome</h2>
+                    <p>Nível 5</p>
+                </div>
 
-            <div class="conquistas">
-                <h3>Conquistas</h3>
-                <div class="conquistas-img>">
-                    <img src="../imagens/Badge.png">
-                </div>
-                <div class="conquistas-img>">
-                    <img src="../imagens/Badge1.png">
-                </div>
-                <div class="conquistas-img>">
-                    <img src="../imagens/Badge2.png">
-                </div>
-                <div class="vertudo">
-                    <button>ver tudo</button>
-                </div>
-            </div>
-
-            <div class="destaques">
-                <h3>Categorias em destaque</h3>
-                <div class="personagens-img">
-                <img src="../imagens/download.jpg">
-                    <div class="personagens-txt">
-                    <h4>Personagens</h4>
+                <div class="conquistas">
+                    <h3>Conquistas</h3>
+                    <div class="conquistas-img>">
+                        <img src="../imagens/Badge.png">
+                    </div>
+                    <div class="conquistas-img>">
+                        <img src="../imagens/Badge1.png">
+                    </div>
+                    <div class="conquistas-img>">
+                        <img src="../imagens/Badge2.png">
+                    </div>
+                    <div class="vertudo">
+                        <button>ver tudo</button>
                     </div>
                 </div>
-                <div class="episodios-img">
-                    <img src="../imagens/images.jpg">
-                    <div class="episodios-txt">
-                    <h4>Episódios</h4>
-                    </div>  
-                </div>
-                <div class="citacoes-img">
-                    <img src="../imagens/claypeople.PNG">
-                    <div class="citacoes-txt">
-                    <h4>Citações</h4>
-                    </div> 
-                </div>
-                <div class="criaturas-img">
-                    <img src="../imagens/9a2e4356892043.59c0b3697ee33.jpg">
-                    <div class="criaturas-txt">
-                    <h4>criaturas</h4>
-                    </div> 
-                </div>
-                <div class="vertudo">
-                    <button>ver tudo</button>
+
+                <div class="destaques">
+                    <h3>Categorias em destaque</h3>
+                    <div class="personagens-img">
+                    <img src="../imagens/download.jpg">
+                        <div class="personagens-txt">
+                        <h4>Personagens</h4>
+                        </div>
+                    </div>
+                    <div class="episodios-img">
+                        <img src="../imagens/images.jpg">
+                        <div class="episodios-txt">
+                        <h4>Episódios</h4>
+                        </div>  
+                    </div>
+                    <div class="citacoes-img">
+                        <img src="../imagens/claypeople.PNG">
+                        <div class="citacoes-txt">
+                        <h4>Citações</h4>
+                        </div> 
+                    </div>
+                    <div class="criaturas-img">
+                        <img src="../imagens/9a2e4356892043.59c0b3697ee33.jpg">
+                        <div class="criaturas-txt">
+                        <h4>criaturas</h4>
+                        </div> 
+                    </div>
+                    <div class="vertudo">
+                        <button>ver tudo</button>
+                    </div>
                 </div>
             </div>
         </div>       
