--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head
-        <meta name=""content="">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Projeto Coderhouse Rick e Morty</title>
         <link rel="stylesheet" href="./styles/styles.css">
     </head>
