alteração CSS página Perfil

--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -43,7 +43,7 @@
             <!-- perfil -->
             <div class="perfil">
                 <div class="progress">
-                    <img src="../Imagens/download (1).jpg">
+                    <img src="../Imagens/128x128 1.png">
                     <h2>Nome</h2>
                     <p>Nível 5</p>
                 </div>
