adição botão bootstrap

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Projeto Coderhouse Rick e Morty</title>
         <link rel="stylesheet" href="./styles/styles.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     </head>
 
     <body style= "background-color: seagreen;">
@@ -16,7 +18,8 @@
             <img src="./Imagens/Rick-And-Morty-Logo.png">
             </div>
             <div class="login">
-            <button type="button">LOGIN</button>
+            <button type="button" class="btn btn-primary">SIGN-UP</button>
+            <button type="button" class="btn btn-secundary">LOGIN</button>
             </div>
         </header>
 
