--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Header -->
         <header>
             <div class="logo">
-            <img src="./Imagens/Rick-And-Morty-Logo.png">
+            <img src="./Imagens/logo.png">
             </div>
             <div class="login">
             <button type="button">LOGIN</button>
@@ -26,25 +26,25 @@
             <!-- Destaques -->
             <div class="destaques">
                 <div class="personagens-img">
-                <img src="./imagens/download.jpg">
+                <img src="./Imagens/personagens.png">
                     <div class="personagens-txt">
                     <h4>Personagens</h4>
                     </div>
                 </div>
                 <div class="episodios-img">
-                <img src="./imagens/images.jpg">
+                <img src="./Imagens/episodios.png">
                     <div class="episodios-txt">
                     <h4>Episódios</h4>
                     </div>  
                 </div>
                 <div class="citacoes-img">
-                <img src="./imagens/claypeople.PNG">
+                <img src="./Imagens/citacoes.png">
                     <div class="citacoes-txt">
                     <h4>Citações</h4>
                     </div> 
                 </div>
                 <div class="criaturas-img">
-                <img src="./imagens/9a2e4356892043.59c0b3697ee33.jpg">
+                <img src="./Imagens/criaturas.png">
                     <div class="criaturas-txt">
                     <h4>criaturas</h4>
                     </div> 
@@ -56,7 +56,7 @@
 
             <!-- Portal -->
             <div class="portal">
-                <img class="portal" src="./Imagens/rick.gif">
+                <img class="portal" src="./Imagens/portal.gif">
                 <button class="jogar">JOGAR</button>
             </div>
 
