--- a/paginas/index.html
+++ b/paginas/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Projeto Coderhouse Rick e Morty</title>
-        <link rel="stylesheet" href="./styles/styles.css">
+        <link rel="stylesheet" href="../styles/styles.css">
     </head>
 
     <body style= "background-color: seagreen;">
@@ -13,10 +13,10 @@
         <!-- Header -->
         <header>
             <div class="logo">
-            <img src="./Imagens/logo.png">
+                <img src="../Imagens/logo.png">
             </div>
             <div class="login">
-            <button type="button">LOGIN</button>
+                <button>LOGIN</button>
             </div>
         </header>
 
@@ -26,25 +26,25 @@
             <!-- Destaques -->
             <div class="destaques">
                 <div class="personagens-img">
-                <img src="./Imagens/personagens.png">
+                <img src="../Imagens/personagens.png">
                     <div class="personagens-txt">
                     <h4>Personagens</h4>
                     </div>
                 </div>
                 <div class="episodios-img">
-                <img src="./Imagens/episodios.png">
+                <img src="../Imagens/episodios.png">
                     <div class="episodios-txt">
                     <h4>Episódios</h4>
                     </div>  
                 </div>
                 <div class="citacoes-img">
-                <img src="./Imagens/citacoes.png">
+                <img src="../Imagens/citacoes.png">
                     <div class="citacoes-txt">
                     <h4>Citações</h4>
                     </div> 
                 </div>
                 <div class="criaturas-img">
-                <img src="./Imagens/criaturas.png">
+                <img src="../Imagens/criaturas.png">
                     <div class="criaturas-txt">
                     <h4>criaturas</h4>
                     </div> 
@@ -56,7 +56,7 @@
 
             <!-- Portal -->
             <div class="portal">
-                <img class="portal" src="./Imagens/portal.gif">
+                <img class="portal" src="../Imagens/portal.gif">
                 <button class="jogar">JOGAR</button>
             </div>
 
