--- a/paginas/index.html
+++ b/paginas/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="../styles/styles.css">
     </head>
 
-    <body style= "background-color: seagreen;">
+    <body>
         
         <!-- Header -->
         <header>
