--- a/paginas/perguntas.html
+++ b/paginas/perguntas.html
@@ -3,16 +3,16 @@
     <head>
         <meta name=""content="">
         <title>Projeto Coderhouse Rick e Morty</title>
-        <link href="../styles/styles2.CSS" rel="stylesheet">
+        <link rel="stylesheet" href="../styles/styles2.CSS">
     </head>
     <body>
         <!-- Header -->
         <header>
             <div class="logo">
-            <img src="../Imagens/Rick-And-Morty-Logo.png">
+                <img src="../Imagens/Rick-And-Morty-Logo.png">
             </div>
             <div class="restart">
-            <button>reiniciar quiz</button>
+                <button>reiniciar quiz</button>
             </div>
             <div class="perfil small">
                 <img src="../imagens/128x128 2.png" style="
