ajustando a tela inicial

--- a/paginas/index.html
+++ b/paginas/index.html
@@ -61,13 +61,10 @@
             </div>
 
             <!-- Avisos -->
-            <div style="text-align: center" class="aviso">
-                <h3>AVISO</h3>
-                <p>Este jogo foi criado de fãs para fãs do desenho. 
-                <br>
-                    Nada neste site tem relação oficial com o produto Rick e Morty.
-                </p>
-                
+            <div class="aviso">
+                <h3>AVISO:</h3>
+                    <p>Este jogo foi criado por fãs do desenho. Nada neste site tem relação oficial com o produto Rick e Morty.
+                    </p>
             </div>
         </main>
     </body>
